samples/_failures_safe/1761702134_6e6933_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea61a9e4.c: In function ‘transform_bounds’:
./samples/SAFE/__tmp_ea61a9e4.c:124:9: error: expected expression at end of input
  124 |         if (
      |         ^~
./samples/SAFE/__tmp_ea61a9e4.c:124:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea61a9e4.c:124:9: error: expected declaration or statement at end of input
